[package]
name = "http-ableton-screen"
version = "0.1.0"
authors = ["Christian Schliz <code@foxat.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simple_logger = "1.11.0"
push2_display = "1.0.0-alpha.2"
embedded-graphics = "0.7.0-alpha.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
